--- a/server/sonar-search/pom.xml
+++ b/server/sonar-search/pom.xml
@@ -37,7 +37,12 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <scope>runtime</scope>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!-- testing -->
