Support property sonar.log.debug (boolean)

--- a/sonar-application/src/main/assembly/conf/sonar.properties
+++ b/sonar-application/src/main/assembly/conf/sonar.properties
@@ -249,6 +249,8 @@
 # and FULL (functional and technical details)
 #sonar.log.profilingLevel=NONE
 
+#sonar.log.debug=false
+
 # Path to log files. Can be absolute or relative to installation directory.
 # Default is <installation home>/logs
 #sonar.path.logs=logs
