--- a/sonar-application/src/main/assembly/conf/sonar.properties
+++ b/sonar-application/src/main/assembly/conf/sonar.properties
@@ -245,7 +245,7 @@
 #--------------------------------------------------------------------------------------------------
 # LOGGING
 
-# TODO
+# Enable debug logs in file sonar.log.
 #sonar.log.debug=false
 
 # Path to log files. Can be absolute or relative to installation directory.
