--- a/pom.xml
+++ b/pom.xml
@@ -132,16 +132,16 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>2.4</version>
-          <configuration>    
-            <archiverConfig>   
-              <!-- Workaround for http://jira.codehaus.org/browse/MASSEMBLY-422 -->    
-              <!-- 420(dec) = 644(oct) -->   
-              <fileMode>420</fileMode>   
-              <!-- 493(dec) = 755(oct) -->   
-              <directoryMode>493</directoryMode>   
-              <defaultDirectoryMode>493</defaultDirectoryMode>   
-            </archiverConfig>    
-          </configuration>          
+          <configuration>
+            <archiverConfig>
+              <!-- Workaround for http://jira.codehaus.org/browse/MASSEMBLY-422 -->
+              <!-- 420(dec) = 644(oct) -->
+              <fileMode>420</fileMode>
+              <!-- 493(dec) = 755(oct) -->
+              <directoryMode>493</directoryMode>
+              <defaultDirectoryMode>493</defaultDirectoryMode>
+            </archiverConfig>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -661,6 +661,16 @@
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
         <version>3.2.1</version>
+      </dependency>
+      <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>chronicle-map</artifactId>
+        <version>2.1.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.thoughtworks.xstream</groupId>
+        <artifactId>xstream</artifactId>
+        <version>1.4.7</version>
       </dependency>
       <dependency>
         <groupId>org.elasticsearch</groupId>
